# asyncgnostic

./: README.md  example.py  pyproject.toml  pytest.ini
.github/workflows/: package.yml  python-package.yml
examples/: readme_example.py  selective_dispatch.py
src/asyncgnostic/: __init__.py
tests/: test_asyncgnostic.py
